data/derived/comb/progs/unify/prog3664.ml.out
Characters 138-154:
  if prod > 10 then (prod mod 10)::( (prod / 10)+(mulByDigit i t) )
                                                 ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
